# LightlyShaders

./: .gitignore  CMakeLists.txt  README.md
src/blur/: CMakeLists.txt  blur.cpp  blur.h
src/blur/kcm/: CMakeLists.txt
src/blur/x11/: CMakeLists.txt
src/liblshelper/: CMakeLists.txt
src/lightlyshaders/: CMakeLists.txt  lightlyshaders.cpp
src/lightlyshaders/kcm/: CMakeLists.txt
src/lightlyshaders/x11/: CMakeLists.txt
